Отлажены контроллеры, добавлен swagger
